# AOUT_practice

01_extract_an_interface_to_allow_replace_underlying_impl/: FileExtensionManager.hpp  IFileExtensionManager.hpp  LogAn.cpp  LogAn.hpp
02_01_inject_stub_impl_via_constructor/: LogAn.hpp
02_01_inject_stub_via_constructor/: FileExtensionManager.hpp  LogAn.cpp
02_01_inject_stub_via_constructor/stub/: FakeFileExtensionManager.cpp  FakeFileExtensionManager.hpp
02_02_inject_stub_as_property_get_or_set/: IFileExtensionManager.hpp  LogAn.cpp  LogAn.hpp
02_02_inject_stub_as_property_get_or_set/test/: CMakeLists.txt  Test_LogAn.cpp
02_03_inject_stub_via_factory/: ExtensionManagerFactory.cpp  ExtensionManagerFactory.hpp  FileExtensionManager.cpp  IFileExtensionManager.hpp  LogAn.cpp  LogAn.hpp
02_03_inject_stub_via_factory/stub/: FakeFileExtensionManager.cpp  FakeFileExtensionManager.hpp
02_03_inject_stub_via_factory/test/: CMakeLists.txt  Test_LogAn.cpp
raw/: LogAn.cpp
